# glium-types

./: CHANGELOG.md  Cargo.toml  README.md
assets/shaders/: screen_vertex.glsl  shaded_frag.glsl  solid_frag.glsl  texture_frag.glsl  toon_shaded_frag.glsl  vertex.glsl  vertex_colour_frag.glsl
examples/: spinning_teapot.rs
src/: generics.rs  lib.rs  main.rs  mat3.rs  mat4.rs  matrix.rs  params.rs  quaternion.rs  quaternions.rs  shaders.rs  teapot.rs  vec2.rs  vec3.rs  vert_types.rs  window.rs
src/glium_generics/: generics.rs  matrix.rs  mod.rs  quaternion.rs  teapot.rs  window.rs
src/matrices/: dmat2.rs  dmat3.rs  dmat4.rs  mat2.rs  mat3.rs  mat4.rs  mod.rs
src/vectors/: bvec2.rs  bvec3.rs  bvec4.rs  divec2.rs  divec3.rs  divec4.rs  duvec2.rs  duvec3.rs  duvec4.rs  dvec2.rs  dvec3.rs  dvec4.rs  ivec2.rs  ivec3.rs  ivec4.rs  mod.rs  uvec2.rs  uvec3.rs  uvec4.rs  vec2.rs  vec3.rs  vec4.rs
src/vectors/simd/: dvec3.rs  uvec2.rs
