[package]
name = "glium-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "glium_types"
path = "src/lib.rs"
test = true
crate-type = ["lib"]

[[example]]
name = "spinning_teapot"

[dependencies]
derive-cmp-ops = "0.1.0"
glium = "0.34.0"

[dev-dependencies]
winit = "0.29.15"