[package]
name = "glium-types"
version = "0.3.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/abss-witch/glium-types"
license = "MIT OR Apache-2.0 OR CC-BY-4.0"
keywords = ["glium", "graphics", "math"]
description = "types to use with glium"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "glium_types"
path = "src/lib.rs"
test = true
crate-type = ["lib"]

[[example]]
name = "spinning_teapot"

[dependencies]
derive-cmp-ops = "0.1.0"
glium = "0.34.0"

[dev-dependencies]
winit = "0.29.15"
